# shapy-blobs

./: .gitignore  README.md  pyproject.toml
src/crop_tools/: __init__.py  __main__.py  crop.py  utils.py
src/meshy_shapes/: __main__.py  pca_meshes.py
src/shapy_blobs/: .fit_data.py.kate-swp  .generate_pca.py.kate-swp  __init__.py  __main__.py  fit_data.py  generate_pca.py  grab_mode.py  plot_fit.py  utils.py
